--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,7 @@
       "@/*": ["*"]
     },
     "allowJs": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule":true,
-    "isolatedModules": true,
-    "noEmit": true,
+    "resolveJsonModule":true
   },
   "include": [
     "src"
