--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "did-you-mean": "^0.0.1",
     "eslint": "^7.15.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.0",
