--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "pnpm test -- --watch",
     "test:staged": "pnpm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "check": "npm-check -u -s"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "clean-webpack-plugin": "^3.0.0",
+    "coveralls": "^3.1.0",
     "css-loader": "^5.0.1",
     "did-you-mean": "^0.0.1",
     "eslint": "^7.15.0",
