--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.12",
+    "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@webpack-cli/serve": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "css-loader": "^5.0.1",
     "did-you-mean": "^0.0.1",
     "eslint": "^7.15.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
@@ -47,10 +48,10 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "webpack": "^5.10.1",
+    "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
