--- a/package.json
+++ b/package.json
@@ -17,51 +17,62 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.5.0",
-    "@testing-library/react": "^11.2.2",
+    "@babel/preset-env": "^7.12.11",
+    "@cypress/webpack-preprocessor": "^5.4.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
     "@types/axios": "^0.14.0",
-    "@types/faker": "^5.1.5",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.13",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@webpack-cli/serve": "^1.1.0",
+    "@types/faker": "^5.1.2",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
-    "css-loader": "^5.0.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
     "cypress": "^6.2.1",
-    "did-you-mean": "^0.0.1",
-    "eslint": "^7.15.0",
+    "eslint": "^7.9.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
-    "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.5",
+    "favicons-webpack-plugin": "^4.2.0",
+    "full-icu": "^1.3.1",
+    "git-commit-msg-linter": "^2.7.0",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^26.4.2",
     "jest-localstorage-mock": "^2.4.3",
-    "lint-staged": "^10.5.3",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "^5.10.1",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "lint-staged": "^10.4.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
+    "start-server-and-test": "^1.11.4",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^26.4.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.4"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "recoil": "0.0.13"
   }
 }
